--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <!-- <h3 class="home__profession">Developer</h3> -->
                             <!-- download CV button -->
                             <div>
-                                <a download="" href="./pdf/NafisAhmad.pdf" class="home__button-movil">Download</a>
+                                <a download="" href="./pdf/NafisAhmad2.pdf" class="home__button-movil">Download</a>
                             </div>
                         </div>
 
